# tcc-postgraduate-computer-vision

./: .gitattributes  README.md
mask-rcnn/: .gitignore  README.md
vit-tcc-qlora-hidrometro/: .env.example  .gitignore  README.md  pyproject.toml
vit-tcc-qlora-hidrometro/artifacts/lora_adapter/: README.md  adapter_config.json  adapter_model.safetensors
vit-tcc-qlora-hidrometro/configs/: autolabel.yaml  detectron2.yaml  label_studio.xml  paths.yaml  preprocessing.yaml  qlora.yaml
vit-tcc-qlora-hidrometro/data/sft/: test.jsonl  train.jsonl  val.jsonl
vit-tcc-qlora-hidrometro/docs/: GUIA_TCC.md  MODELOS_E_ARTEFATOS.md
vit-tcc-qlora-hidrometro/notebooks/: 01_preprocessamento.ipynb  02_dataset_e_labels.ipynb  03_treino_qlora.ipynb  04_resultados_comparativos.ipynb  README.md
vit-tcc-qlora-hidrometro/reports/: README.md  crop_generation_report.csv  evaluation_test.json  label_audit.json  label_studio_export_audit.json  notebook_comparison_test.json
vit-tcc-qlora-hidrometro/scripts/: 00_calibrate_crop.py  00_purge_labels.py  01_generate_crops.py  02_autolabel_gpt4o.py  03_export_label_studio.py  04_train_qlora.py  05_evaluate.py  06_audit_labels.py  06b_audit_label_studio_export.py  07_apply_manual_review.py  setup_env.ps1  setup_env.sh
vit-tcc-qlora-hidrometro/src/hidrometro/: __init__.py  config.py
vit-tcc-qlora-hidrometro/src/hidrometro/api/: main.py
vit-tcc-qlora-hidrometro/src/hidrometro/autolabel/: __init__.py  label_studio.py  openai_labeler.py  reading.py
vit-tcc-qlora-hidrometro/tests/: test_autolabel.py  test_crop.py  test_label_studio_export.py
(+27 files in other folders)
