[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hidrometro-vlm"
version = "0.1.0"
description = "Pipeline híbrido Detectron2 + Florence-2 QLoRA para leitura de hidrômetros"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "PyYAML>=6.0",
    "tqdm>=4.66.0",
    "pillow>=10.0.0",
    "openai>=1.30.0",
    "transformers>=4.56.0,<4.57.0",
    "peft>=0.10.0",
    "bitsandbytes>=0.43.0",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "accelerate>=0.29.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "streamlit>=1.33.0",
    "httpx>=0.27.0",
    "scikit-learn>=1.4.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.4.0", "ipykernel>=6.29.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
